objects/Attendee__c.object
<CustomObject>
    <description>Record of all Attendee</description>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Company Name where the Attendee belongs</description>
        <inlineHelpText>ex. ABC Company</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email Address of the Attendee</description>
        <inlineHelpText>ex. email@gmail.com</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location of the Attendees</description>
        <label>Location</label>
        <referenceTo>Location_Address_Book__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Contact Number of the Attendee</description>
        <inlineHelpText>ex. 09672688171</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>